<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".RegistroActivity">


    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="798dp"
        android:background="@drawable/border_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.9">


        <TextView
            android:id="@+id/register_tittle"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/vt323"
            android:gravity="center"
            android:shadowColor="@color/text_color"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="25"
            android:text="¡Registrate aquí!"
            android:textColor="@color/text_color"
            android:textSize="64sp" />


        <TextView
            android:id="@+id/usuario_label"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:fontFamily="@font/vt323"
            android:text="@string/usuario_label"
            android:textColor="@color/text_color"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/usuario_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5sp"
            android:background="@drawable/edittext_border_green"
            android:ems="10"
            android:fontFamily="@font/vt323"
            android:hint=" "
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/email_label"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:fontFamily="@font/vt323"
            android:text="@string/email_label"
            android:textColor="@color/text_color"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5sp"
            android:background="@drawable/edittext_border_green"
            android:ems="10"
            android:fontFamily="@font/vt323"
            android:hint=" "
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/clave_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:fontFamily="@font/vt323"
            android:text="@string/usuario_pass"
            android:textColor="@color/text_color"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/clave_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5sp"
            android:background="@drawable/edittext_border_green"
            android:ems="10"
            android:fontFamily="@font/vt323"
            android:hint=""
            android:inputType="textPassword"
            android:textColorHint="#9900FF00"
            android:textSize="30sp" />



        <TextView
            android:id="@+id/confirmar_clave_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:fontFamily="@font/vt323"
            android:text="@string/confirmar_clave_label"
            android:textColor="@color/text_color"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/confirmar_clave_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/edittext_border_green"
            android:ems="10"
            android:fontFamily="@font/vt323"
            android:hint=""
            android:inputType="textPassword"
            android:textColorHint="#9900FF00"
            android:textSize="30sp" />

        <Button
            android:id="@+id/regsitrar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@drawable/generic_button_selector"
            android:fontFamily="@font/vt323"
            android:foreground="@drawable/button_border_green"
            android:gravity="center"
            android:shadowColor="@color/text_color"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="25"
            android:text="@string/registrar_btn"
            android:textColor="@color/text_color"
            android:textColorLink="@color/border_color"
            android:textSize="35sp" />

        <Button
            android:id="@+id/volver_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="@drawable/generic_button_selector"
            android:fontFamily="@font/vt323"
            android:foreground="@drawable/button_border_green"
            android:gravity="center"
            android:shadowColor="@color/text_color"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="25"
            android:text=" > IR AL INICIO "
            android:textColor="@color/text_color"
            android:textColorLink="@color/border_color"
            android:textSize="35sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>