<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"  tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="376dp"
        android:layout_height="798dp"
        android:background="@drawable/border_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintWidth_percent="0.9">


        <TextView
            android:id="@+id/login_tittle"
            android:layout_width="249dp"
            android:layout_height="222dp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="40sp"
            android:fontFamily="@font/vt323"
            android:gravity="center"
            android:shadowColor="@color/text_color"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="25"
            android:text="Acceso a Trivia Trainer"
            android:textColor="@color/text_color"
            android:textSize="64sp" />

        <TextView
            android:id="@+id/usuario_label"
            android:layout_width="323dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:text="@string/usuario_label"
            android:textColor="@color/text_color"
            android:textSize="35sp"
            android:fontFamily="@font/vt323"
            />

        <EditText
            android:id="@+id/usuario_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/edittext_border_green"
            android:ems="10"
            android:hint=" "
            android:inputType="text"
            android:textColor="@color/text_color"
            android:fontFamily="@font/vt323"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"
            android:text="@string/usuario_pass"
            android:textColor="@color/text_color"
            android:textSize="35sp"
            android:fontFamily="@font/vt323"
            />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/edittext_border_green"
            android:ems="10"
            android:hint=""
            android:inputType="textPassword"
            android:textColorHint="#9900FF00"
            android:fontFamily="@font/vt323"
            />

        <Button
            android:id="@+id/ingresar_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:background="@drawable/button_border_green"
            android:fontFamily="@font/vt323"
            android:gravity="center"
            android:shadowColor="@color/text_color"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="25"
            android:text="@string/ingresar_btn"
            android:textColor="@color/text_color"
            android:textSize="35sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>