<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity2"
    android:background="@color/background_color">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/border_background"
        android:padding="24dp"
        android:id="@+id/linearLayoutContenido">
        <LinearLayout
            android:id="@+id/fragmentContainerViewQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewsaludoQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vt323"
                android:text="BUENA SUERTE!"
                android:textColor="@color/text_color"
                android:textSize="20dp" />

            <Button
                android:id="@+id/buttonSalirQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vt323"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:background="@drawable/generic_button_selector"
                android:foreground="@drawable/button_border_green"
                android:text="@string/salir_btn"
                android:textColor="@color/text_color"
                android:textSize="25sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="45dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textViewTiempo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Tiempo:"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:fontFamily="@font/vt323"
                android:shadowColor="@color/text_color"
                android:shadowDx="15"
                android:shadowDy="15"
                android:shadowRadius="25" />

            <TextView
                android:id="@+id/textViewTiempoNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_00_00"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:fontFamily="@font/vt323"
                android:shadowColor="@color/text_color"
                android:shadowDx="15"
                android:shadowDy="15"
                android:shadowRadius="25" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewTituloQuiz"
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/vt323"
            android:gravity="center|center_horizontal"
            android:shadowColor="@color/text_color"
            android:shadowDx="15"
            android:shadowDy="15"
            android:shadowRadius="25"
            android:text="@string/quiz_de_conocimiento"
            android:textColor="@color/text_color"
            android:textSize="32sp" />

        <LinearLayout
            android:id="@+id/layoutPregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vt323"
            android:layout_marginTop="24dp"
            android:background="@color/background_color"
            android:foreground="@drawable/button_border_green"
            android:orientation="vertical"
            android:padding="16dp">
            <!-- Pregunta -->
            <TextView
                android:id="@+id/textViewPregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vt323"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="P1: ¿Cuál es la capital de Perú?"
                android:textColor="@color/text_color"
                android:textSize="22sp" />

            <!-- Botón Respuesta 1 -->
            <Button
                android:id="@+id/buttonRespuesta1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vt323"
                android:layout_marginTop="16dp"
                android:background="@drawable/generic_button_selector"
                android:foreground="@drawable/button_border_green"
                android:gravity="left"
                android:text="a) Lima"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <!-- Botón Respuesta 2 -->
            <Button
                android:id="@+id/buttonRespuesta2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vt323"
                android:layout_marginTop="8dp"
                android:background="@drawable/generic_button_selector"
                android:foreground="@drawable/button_border_green"
                android:gravity="left"
                android:text="b) Cusco"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <!-- Botón Respuesta 3 -->
            <Button
                android:id="@+id/buttonRespuesta3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vt323"
                android:layout_marginTop="8dp"
                android:background="@drawable/generic_button_selector"
                android:foreground="@drawable/button_border_green"
                android:gravity="left"
                android:text="c) Arequipa"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

            <!-- Botón Respuesta 4 -->
            <Button
                android:id="@+id/buttonRespuesta4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vt323"
                android:layout_marginTop="8dp"
                android:background="@drawable/generic_button_selector"
                android:foreground="@drawable/button_border_green"
                android:gravity="left"
                android:text="d) Trujillo"
                android:textColor="@color/text_color"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- Layout boton configuracion y sgte pregunta-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="45dp"
            android:gravity="center_vertical"
            android:weightSum="10">

            <!-- Botón de configuracion-->
            <ImageButton
                android:id="@+id/buttonHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/help_24px"
                android:layout_weight="2"
                android:background="@null"
                app:tint="#00FF11"
                android:contentDescription="boton de ayuda" />


            <!-- Botón siguiente pregunta-->
            <Button
                android:id="@+id/buttonSiguientePregunta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vt323"
                android:layout_weight="8"
                android:layout_marginStart="16dp"
                android:background="@drawable/generic_button_selector"
                android:foreground="@drawable/button_border_green"
                android:text="> SIGUIENTE PREGUNTA"
                android:textColor="@color/text_color"
                android:textSize="24sp" />
        </LinearLayout>


    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>